[project]
name = "flopy_owhm_interface"
version = "0.1.0"
description = "A Python interface between FloPy and MODFLOW-OWHM (MF-OWHM) for advanced groundwater modeling."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "flopy",
    "numpy",
    "pandas"
]

[tool.setuptools]
packages = ["flopy_owhm_interface"] 